# MiniMessenger

./: .gitignore  Makefile  manage.py  pyproject.toml  pytest.ini
.github/workflows/: CI.yml
mini_messenger/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
mini_messenger/migrations/: 0001_initial.py
tests/: test_hello.py
