[tool.poetry]
name = "mini-messenger"
version = "0.1.0"
description = ""
authors = ["Voovaaa <rabotyagavova@gmail.com>"]
readme = "README.md"
packages = [{include = "mini_messenger"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
pytest-django = "^4.5.2"
autoflake = "^1.7.7"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
